--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CSS Spotlight Performances</string>
+    <string name="upcoming_events">Upcoming Events</string>
+    <string name="web_info">WEB INFO</string>
+    <string name="add_to_calendar">ADD TO CALENDAR</string>
 </resources>
